--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="header">
         <nav class="nav">
             <div class="nav-brand">
-                <a href="#home" class="brand-link">Anuvind</a>
+                <a href="#home" class="brand-link">My Profile</a>
             </div>
             <ul class="nav-menu">
                 <li><a href="#home" class="nav-link">Home</a></li>
@@ -77,7 +77,7 @@
                 </div>
                 <div class="about-stats">
                     <div class="stat">
-                        <h3>2+</h3>
+                        <h3>1+</h3>
                         <p>Years Experience</p>
                     </div>
                     <div class="stat">
