--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <div class="timeline-item">
                     <div class="timeline-dot"></div>
                     <div class="timeline-content">
-                        <h3>Embedded Systems Engineer</h3>
+                        <h3>Project Intern</h3>
                         <h4>Tata Elxsi • Trivandrum</h4>
                         <span class="timeline-date">May 2024 – November 2024</span>
                         <ul class="achievements">
