--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-map-marker-alt"></i>
-                        <span>Kerala, India</span>
+                        <span>Kozhikode ,Kerala, India</span>
                     </div>
                     <div class="social-links">
                         <a href="https://www.linkedin.com/in/anuvind10/" target="_blank" class="social-link">
