--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <div class="timeline-item">
                     <div class="timeline-dot"></div>
                     <div class="timeline-content">
-                        <h3>Design Head</h3>
+                        <h3>Design Intern </h3>
                         <h4>Revertech IT Solutions Pvt Ltd • Kochi</h4>
                         <span class="timeline-date">2022 – 2023</span>
                         <ul class="achievements">
